@@ -1,5 +1,6 @@
 package com.erp_mes.mes.plant.service;
 
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -9,6 +10,10 @@ import org.springframework.stereotype.Service;
 import com.erp_mes.erp.commonCode.dto.CommonDetailCodeDTO;
 import com.erp_mes.erp.commonCode.entity.CommonDetailCode;
 import com.erp_mes.erp.commonCode.repository.CommonDetailCodeRepository;
+import com.erp_mes.mes.plant.dto.ProcessDTO;
+import com.erp_mes.mes.plant.entity.Process;
+import com.erp_mes.mes.plant.mapper.ProcessMapper;
+import com.erp_mes.mes.plant.repository.ProcessRepository;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
@@ -19,23 +24,51 @@ import lombok.extern.log4j.Log4j2;
 public class ProcessService {
 	
 	final private CommonDetailCodeRepository codeRepository;
+	final private ProcessMapper proMapper;
+	final private ProcessRepository proRepository;
 	
 	
-	
-	public List<Map<String, String>> findAll() {
-		List<CommonDetailCode> comList = codeRepository.findAll();
+	public List<Map<String, Object>> findAll() {
+		List<ProcessDTO> proList = proMapper.findAll();
 		
-		List<Map<String, String>> position = comList.stream()
-			.filter(result -> "PRO".equals(result.getComId().getComId()))
-			.map(CommonDetailCodeDTO :: fromEntity)
-			.map(dto -> Map.of("comDtId", dto.getComDtId(),
-					"comDtNm", dto.getComDtNm()))
-			.toList();
-			
+		List<Map<String, Object>> position = proList.stream()
+			.map(dto -> {
+					Map<String, Object> map = new HashMap<>();
+					map.put("proId", dto.getProId());
+					map.put("proNm", dto.getProNm());
+					map.put("typeNm",dto.getTypeNm());
+					map.put("note",dto.getNote());
+					return map;
+				})
+		    .collect(Collectors.toList());
 		
 		
 		
 		return position;
+	}
+
+
+	public List<CommonDetailCodeDTO> findAllByPro() {
+		List<CommonDetailCode> listCom = codeRepository.findAll();
+		
+		List<CommonDetailCodeDTO> comList = listCom.stream()
+				.filter( result -> "PRO".equals(result.getComId().getComId()))
+				.map(CommonDetailCodeDTO :: fromEntity)
+				.collect(Collectors.toList());
+		
+		return comList;
+	}
+
+
+	public void savePro(ProcessDTO proDTO) {
+		log.info("proService에 진입 savePro------------------------------");
+		
+		Process pro = new Process();
+		pro = pro.fromDTO(proDTO, codeRepository);
+
+			proRepository.save(pro);
+			log.info("저장완료!!");
+		
 	}
 	
 	
